@@ -1,34 +1,46 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<meta http-equiv="content-type" content="application/xhtml; charset=utf-8" />
-	<title>Release Notes</title>
+    <meta http-equiv="content-type" content="application/xhtml; charset=utf-8"/>
+    <title>Release Notes</title>
 </head>
 
 <body>
-    <div>
-        <strong><a href=
-        "http://trac.cyberduck.ch/query?status=closed&amp;milestone=3.1">
-        3.1</a></strong> (Build $Revision$)<br />
+<div>
+    <strong><a href=
+            "http://trac.cyberduck.ch/query?status=closed&amp;milestone=3.1">
+        3.1</a></strong> (Build $Revision$)<br/>
 
-        <ul>
-<li>[Feature] Amazon CloudFront Support (S3)</li>
-<li>[Feature] Cloud Files Support (Mosso) [<a href="http://trac.cyberduck.ch/ticket/2745">#2745</a>]</li>
-<li>[Feature] Pre-configured protocol settings for MobileMe iDisk (WebDAV)</li>
-<li>[Feature] Send arbitrary commands over SSH using the 'Send Command...' interface (SFTP) [<a href="http://trac.cyberduck.ch/ticket/3">#3</a>]
-<li>[Feature] Archive and unarchive files and folders (ZIP, TAR etc.) (SFTP) [<a href="http://trac.cyberduck.ch/ticket/2376">#2376</a>]
-<li>[Feature] Clickable URL fields
-<li>[Feature] Set quarantine attribute on downloaded files</li>
-<li>[Feature] Added Espresso to the list of supported editors (http://macrabbit.com/espresso/) [<a href="http://trac.cyberduck.ch/ticket/2823">#2823</a>]</li>
-<li>[Feature] Download folder in Dock bounces once when download finishes (10.5)</li>
-<li>[Feature] Read IdentityFile setting from OpenSSH configuration in ~/.ssh/config (SFTP) [<a href="http://trac.cyberduck.ch/ticket/152">#152</a>]</li>
-<li>[Feature] Default transfer setting for regular expression of skipped files includes GIT and others [<a href="http://trac.cyberduck.ch/ticket/2829">#2829</a>]</li>
-<li>[Feature] Added QuickLook button to toolbar configuration</li>
-<li>[Bugfix] Uploads fail with digest access authentication [<a href="http://trac.cyberduck.ch/ticket/2268">#2268</a>]</li>
-<li>[Bugfix] Manually sorting bookmarks using drag and drop works for the entire row [<a href="http://trac.cyberduck.ch/ticket/2571">#2571</a>]</li>
-        </ul>
-    </div>
+    <ul>
+        <li>[Feature] Amazon CloudFront Support (S3)</li>
+        <li>[Feature] Cloud Files Support (Mosso) [<a href="http://trac.cyberduck.ch/ticket/2745">#2745</a>]</li>
+        <li>[Feature] Pre-configured protocol settings for MobileMe iDisk (WebDAV)</li>
+        <li>[Feature] Send arbitrary commands over SSH using the 'Send Command...' interface (SFTP) [<a
+                href="http://trac.cyberduck.ch/ticket/3">#3</a>]
+        <li>[Feature] Archive and unarchive files and folders (ZIP, TAR etc.) (SFTP) [<a
+                href="http://trac.cyberduck.ch/ticket/2376">#2376</a>]
+        <li>[Feature] Clickable URL fields
+        <li>[Feature] Set quarantine attribute on downloaded files</li>
+        <li>[Feature] Added Espresso to the list of supported editors (http://macrabbit.com/espresso/) [<a
+                href="http://trac.cyberduck.ch/ticket/2823">#2823</a>]
+        </li>
+        <li>[Feature] Download folder in Dock bounces once when download finishes (10.5)</li>
+        <li>[Feature] Read IdentityFile setting from OpenSSH configuration in ~/.ssh/config (SFTP) [<a
+                href="http://trac.cyberduck.ch/ticket/152">#152</a>]
+        </li>
+        <li>[Feature] Default transfer setting for regular expression of skipped files includes GIT and others [<a
+                href="http://trac.cyberduck.ch/ticket/2829">#2829</a>]
+        </li>
+        <li>[Feature] Added QuickLook button to toolbar configuration</li>
+        <li>[Feature] Display Favicon for Web URL if available in bookmark window</li>
+        <li>[Bugfix] Uploads fail with digest access authentication [<a href="http://trac.cyberduck.ch/ticket/2268">#2268</a>]
+        </li>
+        <li>[Bugfix] Manually sorting bookmarks using drag and drop works for the entire row [<a
+                href="http://trac.cyberduck.ch/ticket/2571">#2571</a>]
+        </li>
+    </ul>
+</div>
 </body>
 </html>
